--- a/package.json
+++ b/package.json
@@ -14,11 +14,23 @@
     "@headlessui/react": "^2.2.7",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.2.1",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "@react-oauth/google": "^0.12.2",
+    "@tiptap/extension-character-count": "^3.6.6",
+    "@tiptap/extension-image": "^3.6.6",
+    "@tiptap/extension-link": "^3.6.6",
+    "@tiptap/extension-placeholder": "^3.6.6",
+    "@tiptap/extension-underline": "^3.6.6",
+    "@tiptap/react": "^3.6.6",
+    "@tiptap/starter-kit": "^3.6.6",
     "@types/react-router-dom": "^5.3.3",
     "aos": "^2.3.4",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dompurify": "^3.2.6",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.12.6",
@@ -32,6 +44,7 @@
     "react-router-dom": "^7.7.1",
     "sweetalert2": "^11.23.0",
     "sweetalert2-react-content": "^5.1.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "zod": "^4.0.17"
   },
@@ -39,6 +52,7 @@
     "@eslint/js": "^9.30.1",
     "@tailwindcss/vite": "^4.1.12",
     "@types/aos": "^3.0.7",
+    "@types/node": "^24.7.2",
     "@types/qrcode.react": "^1.0.5",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
@@ -47,6 +61,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "tw-animate-css": "^1.4.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.4"
