--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.12.6",
     "framer-motion": "^12.23.12",
+    "html-react-parser": "^5.2.7",
     "lucide-react": "^0.536.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
@@ -42,7 +43,7 @@
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1",
-    "sweetalert2": "^11.23.0",
+    "sweetalert2": "^11.26.2",
     "sweetalert2-react-content": "^5.1.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
