--- a/package.json
+++ b/package.json
@@ -46,11 +46,13 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1",
     "react-select": "^5.10.2",
+    "react-toast": "^1.0.3",
     "sweetalert2": "^11.26.2",
     "sweetalert2-react-content": "^5.1.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
-    "zod": "^4.0.17"
+    "zod": "^4.0.17",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
@@ -66,7 +68,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "tw-animate-css": "^1.4.0",
-    "typescript": "~5.8.3",
+    "typescript": "^5.9.3",
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.4"
   }
